--- a/apps/meal-delivery/src/app/app.component.html
+++ b/apps/meal-delivery/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="background">
   <app-nav></app-nav>
-  <router-outlet></router-outlet>
+  <div class="container-fluid move100right move30down">
+    <router-outlet></router-outlet>
+  </div>
   <app-footer></app-footer>
 </div>
