--- a/apps/meal-delivery/src/app/pages/meal/meal.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/meal.component.html
@@ -1,10 +1,3 @@
-<div class="move30down max-width77">
-  <div class="row">
-    <div class="col">
-      <meal-list></meal-list>
-    </div>
-    <div class="col">
-      <router-outlet></router-outlet>
-    </div>
-  </div>
+<div class="container-fluid move100right move30down">
+    <router-outlet></router-outlet>
 </div>
