--- a/apps/meal-delivery/src/app/pages/user/edit/edit.component.html
+++ b/apps/meal-delivery/src/app/pages/user/edit/edit.component.html
@@ -1,135 +1,131 @@
-<div class="container-fluid move100right move30down">
-  <div *ngIf="componentExists && user">
-    <h3>Bewerken van {{ userName }}</h3>
-  </div>
-  <div *ngIf="!componentExists">
-    <h3>Nieuwe gebruiker toevoegen</h3>
-  </div>
-  <div class="max-width77">
+<div *ngIf="componentExists && user">
+  <h3>Bewerken van {{ userName }}</h3>
+</div>
+<div *ngIf="!componentExists">
+  <h3>Nieuwe gebruiker toevoegen</h3>
+</div>
+<div class="max-width77">
 
 
-    <!-- Edit form voor user model -->
-    <form #userEditForm="ngForm" name="form" (ngSubmit)="onSubmit()" novalidate>
-      <div class="row">
-        <div class="col-5">
-          <!-- firstname -->
-          <div class="form-group">
-            <label for="firstname">Voornaam</label>
-            <input type="text" id="firstname" name="firstname" class="form-control" [(ngModel)]="user!.firstName"
-              #firstname="ngModel" minlength="3" required [ngClass]="{
+  <!-- Edit form voor user model -->
+  <form #userEditForm="ngForm" name="form" (ngSubmit)="onSubmit()" novalidate>
+    <div class="row">
+      <div class="col-5">
+        <!-- firstname -->
+        <div class="form-group">
+          <label for="firstname">Voornaam</label>
+          <input type="text" id="firstname" name="firstname" class="form-control" [(ngModel)]="user!.firstName"
+            #firstname="ngModel" minlength="3" required [ngClass]="{
                         'is-invalid': firstname.invalid && firstname.touched
                     }" />
-            <div *ngIf="firstname.invalid && firstname.touched" class="invalid-feedback">
-              <div *ngIf="firstname.errors!['required']">
-                Voornaam is verplicht
-              </div>
-              <div *ngIf="firstname.errors!['minlength']">
-                De voornaam moet 3 karakters lang zijn.
-              </div>
+          <div *ngIf="firstname.invalid && firstname.touched" class="invalid-feedback">
+            <div *ngIf="firstname.errors!['required']">
+              Voornaam is verplicht
+            </div>
+            <div *ngIf="firstname.errors!['minlength']">
+              De voornaam moet 3 karakters lang zijn.
             </div>
           </div>
         </div>
-        <div class="col-5">
-          <!-- lastname -->
-          <div class="form-group">
-            <label for="lastname">Achternaam</label>
-            <input type="text" id="lastname" name="lastname" class="form-control" [(ngModel)]="user!.lastName"
-              #lastname="ngModel" minlength="3" required [ngClass]="{
+      </div>
+      <div class="col-5">
+        <!-- lastname -->
+        <div class="form-group">
+          <label for="lastname">Achternaam</label>
+          <input type="text" id="lastname" name="lastname" class="form-control" [(ngModel)]="user!.lastName"
+            #lastname="ngModel" minlength="3" required [ngClass]="{
                         'is-invalid': lastname.invalid && lastname.touched
                     }" />
-            <div *ngIf="lastname.invalid && lastname.touched" class="invalid-feedback">
-              <div *ngIf="lastname.errors!['required']">
-                Achternaam is verplicht
-              </div>
-              <div *ngIf="lastname.errors!['minlength']">
-                De achternaam moet 3 karakters lang zijn.
-              </div>
+          <div *ngIf="lastname.invalid && lastname.touched" class="invalid-feedback">
+            <div *ngIf="lastname.errors!['required']">
+              Achternaam is verplicht
+            </div>
+            <div *ngIf="lastname.errors!['minlength']">
+              De achternaam moet 3 karakters lang zijn.
             </div>
           </div>
         </div>
       </div>
-      <br>
-      <div class="row">
-        <div class="col-5">
-          <!-- emailaddress -->
-          <div class="row-5">
-            <div class="form-group">
-              <label for="emailaddress">E-mailadres</label>
-              <input type="text" id="emailaddress" name="emailaddress" class="form-control"
-                [(ngModel)]="user!.emailAddress" #emailaddress="ngModel" minlength="3" required [ngClass]="{
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-5">
+        <!-- emailaddress -->
+        <div class="row-5">
+          <div class="form-group">
+            <label for="emailaddress">E-mailadres</label>
+            <input type="text" id="emailaddress" name="emailaddress" class="form-control"
+              [(ngModel)]="user!.emailAddress" #emailaddress="ngModel" minlength="3" required [ngClass]="{
                         'is-invalid': emailaddress.invalid && emailaddress.touched
                     }" />
-              <div *ngIf="emailaddress.invalid && emailaddress.touched" class="invalid-feedback">
-                <div *ngIf="emailaddress.errors!['required']">
-                  E-mailadres is verplicht
-                </div>
-                <div *ngIf="emailaddress.errors!['minlength']">
-                  De E-mailadres moet 3 karakters lang zijn.
-                </div>
+            <div *ngIf="emailaddress.invalid && emailaddress.touched" class="invalid-feedback">
+              <div *ngIf="emailaddress.errors!['required']">
+                E-mailadres is verplicht
+              </div>
+              <div *ngIf="emailaddress.errors!['minlength']">
+                De E-mailadres moet 3 karakters lang zijn.
               </div>
             </div>
           </div>
-          <br>
-          <!-- phonenumber -->
-          <div class="row-5 move5down">
-            <div class="form-group">
-              <label for="phonenumber">Telefoonnummer</label>
-              <input type="text" id="phonenumber" name="phonenumber" class="form-control"
-                [(ngModel)]="user!.phoneNumber" #phonenumber="ngModel" minlength="10" maxlength="10" required [ngClass]="{
+        </div>
+        <br>
+        <!-- phonenumber -->
+        <div class="row-5 move5down">
+          <div class="form-group">
+            <label for="phonenumber">Telefoonnummer</label>
+            <input type="text" id="phonenumber" name="phonenumber" class="form-control" [(ngModel)]="user!.phoneNumber"
+              #phonenumber="ngModel" minlength="10" maxlength="10" required [ngClass]="{
                           'is-invalid': phonenumber.invalid && phonenumber.touched
                       }" />
-              <div *ngIf="phonenumber.invalid && phonenumber.touched" class="invalid-feedback">
-                <div *ngIf="phonenumber.errors!['required']">
-                  Telefoonnummer is verplicht
-                </div>
-                <div *ngIf="phonenumber.errors!['minlength']">
-                  De Telefoonnummer moet 10 karakters lang zijn.
-                </div>
+            <div *ngIf="phonenumber.invalid && phonenumber.touched" class="invalid-feedback">
+              <div *ngIf="phonenumber.errors!['required']">
+                Telefoonnummer is verplicht
+              </div>
+              <div *ngIf="phonenumber.errors!['minlength']">
+                De Telefoonnummer moet 10 karakters lang zijn.
               </div>
             </div>
           </div>
-          <br>
-
         </div>
-        <div class="col-5">
-          <pre>{{ user | json }}</pre>
-        </div>
-      </div>
-
-      <div class="row">
+        <br>
         <!-- birthdate-->
-        <div class="col-5">
+        <div class="row-5 move5down">
           <div class="form-group">
             <label for="birthdate">Geboortedatum</label>
             <input type="date" id="birthdate" name="birthdate" class="form-control"
               [ngModel]="user!.birthDate | date:'yyyy-MM-dd'" (ngModelChange)="user!.birthDate = $event" />
           </div>
         </div>
-        <div class="col">
-          <!-- isgraduated -->
-          <div class="row-5 py-4 move5down">
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" id="isgraduated" name="isgraduated"
-                [(ngModel)]="user!.isGraduated" #isgraduated="ngModel" />
-              <label for="isgraduated">Is afgestudeerd</label>
-            </div>
+      </div>
+      <div class="col-5">
+        <pre>{{user | json}}</pre>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-5"></div>
+      <!-- isgraduated -->
+      <div class="col-5 move30up">
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="isgraduated" name="isgraduated"
+            [(ngModel)]="user!.isGraduated" #isgraduated="ngModel" />
+          <label for="isgraduated">Is afgestudeerd</label>
+        </div>
+      </div>
+    </div>
+    <!-- Submit en Cancel buttons -->
+    <div class="row move34down">
+      <div class="col minHe300">
+        <button type="submit" class="btn btn-primary mx-2" [disabled]="!userEditForm.valid">
+          <div *ngIf="componentExists && user">
+            Gebruiker bewerken
           </div>
-        </div>
+          <div *ngIf="!componentExists">
+            Gebruiker toevoegen
+          </div>
+        </button>
+        <button class="btn btn-warning mx-2" routerLink="/user">Annuleren</button>
       </div>
-      <!-- Submit en Cancel buttons -->
-      <div class="row py-4">
-        <div class="col minHe300">
-          <button type="submit" class="btn btn-primary mx-2" [disabled]="!userEditForm.valid">
-            <div *ngIf="componentExists && user">
-              Gebruiker bewerken
-            </div>
-            <div *ngIf="!componentExists">
-              Gebruiker toevoegen
-            </div>
-          </button>
-          <button class="btn btn-warning mx-2" routerLink="/user">Annuleren</button>
-        </div>
-      </div>
-    </form>
-  </div>
+    </div>
+  </form>
 </div>
