--- a/apps/meal-delivery/src/app/shared/nav/nav.component.html
+++ b/apps/meal-delivery/src/app/shared/nav/nav.component.html
@@ -10,8 +10,8 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/product">Producten</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/user" [disabled]="(loggedInUser$ | async) === undefined">Gebruikers</a>
+    <li class="nav-item" *ngIf="loggedInUser$ | async as user">
+      <a *ngIf="authService.checkIsAdmin(token)" class="nav-link" routerLink="/user">Gebruikers</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLink="/studentHouse">Studentenhuizen</a>
