--- a/apps/meal-delivery/src/app/pages/meal/orderlist/orderlist.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/orderlist/orderlist.component.html
@@ -1,6 +1,6 @@
 <div class="row container list">
   <div class="d-flex justify-content-between align-items-center">
-    <h3 class="card-title">Maaltijden lijst</h3>
+    <h3 class="card-title">Bestelde Maaltijden lijst</h3>
     <div>
       <button type="button" class="btn btn-primary move5down" routerLink="new">Nieuwe maaltijd toevoegen</button>
     </div>
@@ -10,7 +10,7 @@
       <br>
       <div class="mb240">
         <div class="row">
-          <div class="col-sm-12 col-md-auto col-lg-6" *ngFor="let meal of meals$ | async; let i = index">
+          <div class="col-sm-12 col-md-auto col-lg-6" *ngFor="let meal of user?.meals; let i = index">
             <div *ngIf="isStudent || isAdmin || meal.owner.id == currentUserId" class="card">
               <div class="card-body">
                 <h5 class="card-title">{{meal.name}}</h5>
@@ -22,14 +22,8 @@
                       voor meer details.</a></li>
                 </ul>
                 <div class="alignEnd" *ngIf="isStudent">
-                  <a class="order" title="Bestellen" data-toggle="tooltip" (click)="orderMeal(meal.id!)"
-                    routerLinkActive="active"><i class="material-icons">&#xE8CC;</i></a>
-                </div>
-                <div class="alignEnd" *ngIf="!isStudent">
-                  <a class="edit" title="Bewerken" data-toggle="tooltip" routerLink="{{ meal.id }}/edit"
-                    routerLinkActive="active"><i class="material-icons">&#xE254;</i></a>
-                  <a class="delete" title="Verwijderen" data-toggle="tooltip" (click)="deleteMeal(meal.id!)"
-                    routerLinkActive="active"><i class="material-icons">&#xE872;</i></a>
+                  <a class="delete" title="Bestelling annuleren" data-toggle="tooltip" (click)="cancelOrder(meal.id!)"
+                    routerLinkActive="active"><i class="material-icons">cancel</i></a>
                 </div>
               </div>
             </div>
