--- a/apps/meal-delivery/src/app/shared/nav/nav.component.css
+++ b/apps/meal-delivery/src/app/shared/nav/nav.component.css
@@ -1,6 +1,6 @@
 :host {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   font-size: 14px;
   color: #333;
   box-sizing: border-box;
@@ -10,6 +10,15 @@
 
 .spacer {
   flex: 1;
+}
+
+.dropdown-menu.show {
+  background-color: #f5f5dc;
+}
+
+.dropdown-item:hover {
+  background-color: unset;
+  color: unset;
 }
 
 .toolbar {
