--- a/apps/meal-delivery/src/app/shared/nav/nav.component.html
+++ b/apps/meal-delivery/src/app/shared/nav/nav.component.html
@@ -4,8 +4,15 @@
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" routerLink="/dashboard">Home</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" routerLink="/meal">Maaltijden</a>
+    <li class="nav-item dropdown" ngbDropdown>
+      <a class="nav-link dropdown-toggle" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown"
+        aria-expanded="false" ngbDropdownToggle>
+        Maaltijden
+      </a>
+      <ul class="dropdown-menu" ngbDropdownMenu aria-labelledby="navbarScrollingDropdown">
+        <li ngbDropdownItem><a class="dropdown-item" routerLink="/meal">Maaltijden</a></li>
+        <li ngbDropdownItem><a class="dropdown-item" routerLink="/meal/orderlist">Bestelde maaltijden</a></li>
+      </ul>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLink="/product">Producten</a>
