--- a/apps/meal-delivery/src/app/pages/meal/list/list.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/list/list.component.html
@@ -2,7 +2,10 @@
   <div class="d-flex justify-content-between align-items-center">
     <h3 class="card-title">Maaltijden lijst</h3>
     <div>
-      <button type="button" class="btn btn-primary move5down" routerLink="new">Nieuwe maaltijd toevoegen</button>
+      <button *ngIf="!isStudent" type="button" class="btn btn-primary move5down" routerLink="new">Nieuwe maaltijd
+        toevoegen</button>
+      <button *ngIf="isStudent" type="button" class="btn btn-primary move5down" routerLink="/meal/orderlist">Bestelde
+        maaltijden</button>
     </div>
   </div>
   <div class="row container">
