--- a/apps/meal-delivery/src/app/pages/meal/orderlist/orderlist.component.html
+++ b/apps/meal-delivery/src/app/pages/meal/orderlist/orderlist.component.html
@@ -2,7 +2,7 @@
   <div class="d-flex justify-content-between align-items-center">
     <h3 class="card-title">Bestelde Maaltijden lijst</h3>
     <div>
-      <button type="button" class="btn btn-primary move5down" routerLink="new">Nieuwe maaltijd toevoegen</button>
+      <button type="button" class="btn btn-primary move5down" routerLink="/meal">Nieuwe maaltijd toevoegen</button>
     </div>
   </div>
   <div class="row container">
@@ -18,8 +18,8 @@
                   <li>Eigenaar: {{meal.owner.username}}</li>
                   <li>Bezorgtijd: {{meal?.deliveryTime | date:"HH:mm"}}</li>
                   <li>Bezorgdatum: {{meal?.deliveryDate | date: "dd-MM-YYYY"}}</li>
-                  <li> <a routerLink="{{ meal.id }}" routerLinkActive="active" ariaCurrentWhenActive="page">Klik hier
-                      voor meer details.</a></li>
+                  <li> <a [routerLink]="['/meal', meal.id]" routerLinkActive="active" ariaCurrentWhenActive="page">Klik
+                      hier voor meer details.</a></li>
                 </ul>
                 <div class="alignEnd" *ngIf="isStudent">
                   <a class="delete" title="Bestelling annuleren" data-toggle="tooltip" (click)="cancelOrder(meal.id!)"
